# jadwal

./: .gitignore  README.md  demo.tape  pyproject.toml
docs/: index.html  kindle.html
jadwal/: __init__.py  __main__.py  cli.py  data.py  display.py  generator.py
